desktop/airootfs/etc/iptables/iptables.rules
# Generated by iptables-save v1.4.21 on Wed Aug 12 21:32:58 2015
*security
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Wed Aug 12 21:32:58 2015
# Generated by iptables-save v1.4.21 on Wed Aug 12 21:32:58 2015
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Wed Aug 12 21:32:58 2015
# Generated by iptables-save v1.4.21 on Wed Aug 12 21:32:58 2015
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Wed Aug 12 21:32:58 2015
# Generated by iptables-save v1.4.21 on Wed Aug 12 21:32:58 2015
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A OUTPUT ! -o lo -p tcp -m owner --uid-owner 1001 -j REDIRECT --to-ports 9051
-A OUTPUT ! -o lo -p udp -m owner --uid-owner 1001 -m udp --dport 53 -j REDIRECT --to-ports 9053
COMMIT
# Completed on Wed Aug 12 21:32:58 2015
# Generated by iptables-save v1.4.21 on Wed Aug 12 21:32:58 2015
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:LO_TCP - [0:0]
:LO_UDP - [0:0]
:TCP - [0:0]
:UDP - [0:0]
-A INPUT -p icmp -j DROP
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED --ctproto 6 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED --ctproto 17 -j ACCEPT
-A INPUT -i lo -p tcp -m conntrack --ctstate NEW -j LO_TCP
-A INPUT -i lo -p udp -m conntrack --ctstate NEW -j LO_UDP
-A INPUT -p tcp -m conntrack --ctstate NEW -j TCP
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -j LOG --log-prefix DROPPED --log-level 6
-A INPUT -j DROP
-A OUTPUT -p icmp -j DROP
-A OUTPUT -p tcp -m tcp --dport 5228 -j DROP
-A OUTPUT -p tcp -m owner --uid-owner 1002 -m tcp --dport 9051 -j ACCEPT
-A OUTPUT -p udp -m owner --uid-owner 1002 -m udp --dport 9053 -j ACCEPT
-A OUTPUT ! -o lo -m owner --uid-owner 1002 -j DROP
-A LO_TCP -d 127.0.0.1/32 -p tcp -m tcp --dport 9051 -j ACCEPT
-A LO_TCP -j LOG --log-prefix LO_TCP --log-level 6
-A LO_TCP -j DROP
-A LO_UDP -d 127.0.0.1/32 -p udp -m udp --dport 9053 -j ACCEPT
-A LO_UDP -j LOG --log-prefix LO_UDP --log-level 6
-A LO_UDP -j DROP
-A TCP -j LOG --log-prefix TCP --log-level 6
-A TCP -j DROP
-A UDP -j LOG --log-prefix UDP --log-level 6
-A UDP -j DROP
COMMIT
# Completed on Wed Aug 12 21:32:58 2015
